--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Bootstrap demo</title>
+  <title>Mayon Volcano - The Perfect Cone</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
   <link rel="stylesheet" href="style.css">
@@ -13,56 +13,133 @@
 <body>
   <div class="row">
     <div class="col">
-<nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top custom-navbar">
-    <div class="container-fluid">
-      <a class="navbar-brand logo-mc ms-auto">
-        <img src="mclogo-black.png" alt="mclogo" width="40" height="30">
-      </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
-        aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarNav">
-        <ul class="navbar-nav ms-lg-auto">
-          <li class="nav-item">
-            <a class="nav-link" aria-current="page" href="#top">Home</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">About</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">History</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">To Do</a>
-          </li>
-          <li class="nav-item">
-            <a class="nav-link" href="#">Gallery</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-  </nav>
-  <section class="main-content text-white">
-    <section class="hero">
-      <div class="hero-overlay"></div>
-      <div class="container">
-        <div class="row align-items-center">
-          <div class="col-lg-8">
-            <h1 class="display-4 nvidia-mainlogo">Mayon Volcano</h1>
-            <p class="lead">World's Most Perfect Cone Volcano</p>
+      <nav class="navbar navbar-expand-lg bg-body-tertiary fixed-top custom-navbar">
+        <div class="container-fluid">
+          <a class="navbar-brand logo-mc ms-auto">
+            <img src="mclogo-black.png" alt="mclogo" width="40" height="30">
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+            aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-lg-auto">
+              <li class="nav-item">
+                <a class="nav-link" aria-current="page" href="#top">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#history">History</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#gallery">Gallery</a>
+              </li>
+            </ul>
           </div>
         </div>
-      </div>
-    </section>
+      </nav>
+      <section class="main-content text-white">
+        <section class="hero" id="top">
+          <div class="hero-overlay"></div>
+          <div class="container">
+            <div class="row align-items-center">
+              <div class="col-lg-8">
+                <h1 class="display-4 mayon-mainlogo">Mayon Volcano</h1>
+                <p class="lead">World's Most Perfect Cone Volcano</p>
+              </div>
+            </div>
+          </div>
+        </section>
+      </section>
+      <section class="history-section py-5" id="history">
+        <div class="container">
+          <div class="row">
+            <div class="col-lg-10 mx-auto">
+              <h2 class="display-5 mb-4 text-center">Brief History of Mayon Volcano</h2>
+              <div class="alert alert-info">
+                <strong>Did you know?</strong> Mayon Volcano is renowned for its almost perfect conical shape and is
+                considered one of the world's most active volcanoes.
+              </div>
+              <h3 class="mt-5 mb-3">Origins and Formation</h3>
+              <p>Mayon Volcano, standing at 2,463 meters above sea level, is located in the province of Albay in the
+                Bicol Region of the Philippines. The volcano's formation began approximately 20,000 years ago through
+                successive eruptions that built up its iconic symmetrical cone shape.</p>
+              <h3 class="mt-5 mb-3">Historical Eruptions</h3>
+              <p>Mayon has erupted over 50 times in recorded history, making it the most active volcano in the
+                Philippines. The first recorded eruption dates back to 1616.</p>
+              <h4 class="mt-4 mb-3">Notable Eruptions</h4>
+              <div class="row g-4 mb-4">
+                <div class="col-md-6">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title">1814 Eruption</h5>
+                      <p class="card-text">The most devastating eruption in Mayon's history. It buried the town of
+                        Cagsawa, killing over 1,200 people. The Cagsawa Church ruins remain as a memorial and popular
+                        tourist destination today.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title">1897 Eruption</h5>
+                      <p class="card-text">Claimed approximately 400 lives and caused significant destruction to
+                        surrounding areas.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title">1993 Eruption</h5>
+                      <p class="card-text">Resulted in 75 fatalities, including several farmers and scientists who were
+                        caught by pyroclastic flows.</p>
+                    </div>
+                  </div>
+                </div>
+                <div class="col-md-6">
+                  <div class="card h-100">
+                    <div class="card-body">
+                      <h5 class="card-title">2018 Eruption</h5>
+                      <p class="card-text">One of the most recent major eruptions, prompting the evacuation of over
+                        80,000 residents. The eruption lasted several weeks with continuous lava fountaining and ash
+                        emissions.</p>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              <h3 class="mt-5 mb-3">The Legend of Daragang Magayon</h3>
+              <p>According to local folklore, the volcano is named after the beautiful maiden Daragang Magayon (meaning
+                "beautiful maiden" in Bicolano). Legend tells of her tragic love story with the warrior Panganoran,
+                whose deaths led to the formation of the volcano. This romantic tale has become deeply embedded in
+                Bicolano culture and identity.</p>
+              <h3 class="mt-5 mb-3">Modern Monitoring and Safety</h3>
+              <p>Today, Mayon Volcano is closely monitored by the Philippine Institute of Volcanology and Seismology
+                (PHIVOLCS). The agency maintains a permanent danger zone of 6-8 kilometers radius around the volcano's
+                summit, which is strictly off-limits to the public.</p>
+              <p>Despite its dangers, Mayon remains a source of pride for Filipinos, particularly for the people of
+                Albay. Its perfect cone continues to attract tourists, scientists, and adventurers from around the
+                world.</p>
+              <div class="card mt-5 bg-light">
+                <div class="card-body">
+                  <h5 class="card-title">Quick Facts</h5>
+                  <ul class="mb-0">
+                    <li><strong>Location:</strong> Albay Province, Bicol Region, Philippines</li>
+                    <li><strong>Height:</strong> 2,463 meters (8,081 feet)</li>
+                    <li><strong>Type:</strong> Stratovolcano</li>
+                    <li><strong>Number of Historical Eruptions:</strong> Over 50</li>
+                    <li><strong>Most Destructive Eruption:</strong> 1814</li>
+                    <li><strong>Most Recent Major Eruption:</strong> 2018</li>
+                  </ul>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
     </div>
   </div>
-  
-
-
-
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
+    integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI"
     crossorigin="anonymous"></script>
 </body>
 
