fixed the carousel caption on small screens

--- a/index.html
+++ b/index.html
@@ -138,7 +138,6 @@
       </section>
     </div>
   </div>
-  <!-- Gallery Section -->
   <section class="gallery-section py-5 bg-light" id="gallery">
     <div class="container">
       <div class="row">
@@ -151,9 +150,7 @@
 
       <div class="row">
         <div class="col-lg-10 mx-auto">
-          <!-- Bootstrap Carousel -->
           <div id="mayonGalleryCarousel" class="carousel slide" data-bs-ride="carousel">
-            <!-- Carousel Indicators -->
             <div class="carousel-indicators">
               <button type="button" data-bs-target="#mayonGalleryCarousel" data-bs-slide-to="0" class="active"
                 aria-current="true" aria-label="Slide 1"></button>
@@ -175,100 +172,90 @@
                 aria-label="Slide 9"></button>
             </div>
 
-            <!-- Carousel Items -->
             <div class="carousel-inner" style="height: 600px;">
-              <!-- Slide 1 -->
+
               <div class="carousel-item active" style="height: 600px;">
                 <img src="images/mayon-perfectcone.jpg" class="d-block w-100" style="height: 100%; object-fit: cover;"
                   alt="Mayon Volcano Perfect Cone">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3">
+                <div class="carousel-caption bg-dark bg-opacity-75 rounded p-2 p-md-3">
                   <h5>The Perfect Cone</h5>
-                  <p>Mayon's iconic symmetrical shape against a clear blue sky.</p>
+                  <p class="d-none d-sm-block">Mayon's iconic symmetrical shape against a clear blue sky.</p>
                 </div>
               </div>
 
-              <!-- Slide 2 -->
               <div class="carousel-item" style="height: 600px;">
                 <img src="images/mayon-cagsawa.jpg" class="d-block w-100" style="height: 100%; object-fit: cover;"
                   alt="Cagsawa Ruins with Mayon">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3">
+                <div class="carousel-caption bg-dark bg-opacity-75 rounded p-2 p-md-3">
                   <h5>Cagsawa Ruins</h5>
-                  <p>Historic church ruins with Mayon Volcano in the background.</p>
+                  <p class="d-none d-sm-block">Historic church ruins with Mayon Volcano in the background.</p>
                 </div>
               </div>
 
-              <!-- Slide 3 -->
               <div class="carousel-item" style="height: 600px;">
                 <img src="images/mayon-sunrise.jpg" class="d-block w-100" style="height: 100%; object-fit: cover;"
                   alt="Mayon at Sunrise">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3">
+                <div class="carousel-caption bg-dark bg-opacity-75 rounded p-2 p-md-3">
                   <h5>Dawn at Mayon</h5>
-                  <p>Breathtaking sunrise view illuminating the volcano.</p>
+                  <p class="d-none d-sm-block">Breathtaking sunrise view illuminating the volcano.</p>
                 </div>
               </div>
 
-              <!-- Slide 4 -->
               <div class="carousel-item" style="height: 600px;">
                 <img src="images/mayon-eruption.jpg" class="d-block w-100" style="height: 100%; object-fit: cover;"
                   alt="Mayon Eruption">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3">
+                <div class="carousel-caption bg-dark bg-opacity-75 rounded p-2 p-md-3">
                   <h5>Volcanic Activity</h5>
-                  <p>Mayon displaying its raw power during an eruption.</p>
+                  <p class="d-none d-sm-block">Mayon displaying its raw power during an eruption.</p>
                 </div>
               </div>
 
-              <!-- Slide 5 -->
               <div class="carousel-item" style="height: 600px;">
                 <img src="images/mayon-lava.jpg" class="d-block w-100" style="height: 100%; object-fit: cover;"
                   alt="Mayon Lava Flow">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3">
+                <div class="carousel-caption bg-dark bg-opacity-75 rounded p-2 p-md-3">
                   <h5>Lava Flow</h5>
-                  <p>Dramatic lava cascading down Mayon's slopes at night.</p>
+                  <p class="d-none d-sm-block">Dramatic lava cascading down Mayon's slopes at night.</p>
                 </div>
               </div>
 
-              <!-- Slide 6 -->
               <div class="carousel-item" style="height: 600px;">
                 <img src="images/mayon-countryside.jpg" class="d-block w-100" style="height: 100%; object-fit: cover;"
                   alt="Mayon and Countryside">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3">
+                <div class="carousel-caption bg-dark bg-opacity-75 rounded p-2 p-md-3">
                   <h5>Albay Countryside</h5>
-                  <p>Mayon towering over the lush Bicol landscape.</p>
+                  <p class="d-none d-sm-block">Mayon towering over the lush Bicol landscape.</p>
                 </div>
               </div>
 
-              <!-- Slide 7 -->
               <div class="carousel-item" style="height: 600px;">
                 <img src="images/mayon-clouds.jpg" class="d-block w-100" style="height: 100%; object-fit: cover;"
                   alt="Mayon with Clouds">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3">
+                <div class="carousel-caption bg-dark bg-opacity-75 rounded p-2 p-md-3">
                   <h5>Mayon in the Clouds</h5>
-                  <p>The summit peeking through dramatic cloud formations.</p>
+                  <p class="d-none d-sm-block">The summit peeking through dramatic cloud formations.</p>
                 </div>
               </div>
 
-              <!-- Slide 8 -->
               <div class="carousel-item" style="height: 600px;">
                 <img src="images/mayon-nightsky.jpg" class="d-block w-100" style="height: 100%; object-fit: cover;"
                   alt="Mayon Night Sky">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3">
+                <div class="carousel-caption bg-dark bg-opacity-75 rounded p-2 p-md-3">
                   <h5>Starry Night</h5>
-                  <p>Mayon silhouette beneath a stunning starlit sky.</p>
+                  <p class="d-none d-sm-block">Mayon silhouette beneath a stunning starlit sky.</p>
                 </div>
               </div>
 
-              <!-- Slide 9 -->
               <div class="carousel-item" style="height: 600px;">
                 <img src="images/mayon-aerial.jpg" class="d-block w-100" style="height: 100%; object-fit: cover;"
                   alt="Aerial View of Mayon">
-                <div class="carousel-caption d-none d-md-block bg-dark bg-opacity-75 rounded p-3">
+                <div class="carousel-caption bg-dark bg-opacity-75 rounded p-2 p-md-3">
                   <h5>Aerial Perspective</h5>
-                  <p>Bird's eye view showcasing Mayon's perfect geometry.</p>
+                  <p class="d-none d-sm-block">Bird's eye view showcasing Mayon's perfect geometry.</p>
                 </div>
               </div>
             </div>
 
-            <!-- Carousel Controls -->
             <button class="carousel-control-prev" type="button" data-bs-target="#mayonGalleryCarousel"
               data-bs-slide="prev">
               <span class="carousel-control-prev-icon" aria-hidden="true"></span>
