--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="col">
       <nav class="navbar navbar-expand-lg fixed-top custom-navbar">
         <div class="container-fluid">
-          <a class="navbar-brand logo-mc ms-auto">
+          <a class="navbar-brand logo-mc">
             <img src="images/mclogo-black.png" alt="mclogo" width="40" height="30">
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
